--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- LOADING -->
+    <div id="loading" class="loading">
+        <div class="loading-spinner"></div>
+        <p>Carregando produtos...</p>
+    </div>
+
     <!-- HEADER -->
     <header class="header">
         <div class="header-container">
